# CovenantAI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
covenant/: __init__.py  assertions.py  cli.py  exceptions.py  models.py  reporter.py  runner.py
covenant/adapters/: __init__.py  base.py  langchain.py  openai_agents.py  pipecat.py  pipecat_pipeline.py
docs/: assertion-types.md  ci-integration.md  getting-started.md  pipecat-support.md
examples/langchain_agent/: agent.py
examples/langchain_agent/tests/: email_agent.yaml  example.yaml
examples/openai_agents_sdk/: agent.py
examples/openai_agents_sdk/tests/: email_agent.yaml  example.yaml
examples/pipecat_agent/: agent.py
examples/pipecat_agent/tests/: voice_assistant.yaml
examples/pipecat_customer_support/: agent.py
examples/pipecat_customer_support/tests/: support_agent.yaml
test-covenant/: demo-agent_agent.py
test-covenant/tests/: demo-agent.yaml
tests/: __init__.py  test_adapters.py  test_assertions.py  test_cli.py  test_models.py  test_pipecat_adapter.py  test_pipecat_assertions.py  test_pipecat_pipeline.py  test_runner.py
tests/fixtures/: mock_adapter.py  sample_scenarios.yaml
tests/integration/: test_pipecat_e2e.py
tests/mocks/pipecat/frames/: frames.py
tests/mocks/pipecat/pipeline/: pipeline.py  runner.py  task.py
tests/mocks/pipecat/processors/: frame_processor.py
